# pth-dispatcher-playground

./: .gitignore  README.md  install_cmake.sh
libtv/: CMakeLists.txt
libtv/cmake/: tvConfig.cmake.in
libtv/csrc/: dispatch_power3.cpp  power3.h  vision.cpp  vision.h
libtv/csrc/cpu/: power3.cpp  vision_cpu.h
libtv/csrc/cuda/: power3.cu  vision_cuda.h
tvapp/: CMakeLists.txt  app.cpp
